<resources>
    <string name="app_name">Aplikasi Mobile</string>
    <string name="bawapulang">Bawa Pulang</string>
    <string name="tamu">Tamu</string>
    <string name="tanpaketerangan">Tanpa Keterangan</string>
    <string name="perbarui">Perbarui</string>
    <string name="datapelanggan">Data Pelanggan</string>
    <string name="tambah">Tambah</string>
    <string name="batal">Batal</string>
    <string name="simpan">SIMPAN</string>
    <string name="edit">EDIT</string>
    <string name="gagal_simpan">Gagal menyimpan data</string>
    <string name="toast_simpan">Berhasil disimpan</string>
    <string name="toast_edit">Berhasil Di edit</string>
    <string name="tambah_kendaraan">Menu Tambah Kendaraan</string>
    <string name="menu_merk">Menu Merk</string>
    <string name="menu_pelanggan">Menu Pelanggan</string>
    <string name="tidak">Tidak</string>
    <string name="judul_konfirmasi">Konfimasi Pembayaran Uang Muka</string>
    <string name="belum_kembali">Masih terdapat kendaraan yang belum dikembalikan</string>
    <string name="menu_pegawai">Menu Pegawai</string>
    <string name="menu_kendaraan">Menu Kendaraan</string>
    <string name="lebih_dp">Uang Muka Melebih total</string>
    <string name="subjudul_konfirmasi">Apakah anda yakin simpan pembayaran ini ?</string>
    <string name="iya">Iya</string>
    <string name="judul_cetak">Cetak Struk</string>
    <string name="subjudul_cetak">Apakah anda ingin mencetak struk ?</string>
    <string name="judul_batalcetak">Batalkan Cetak Struk</string>
    <string name="subjudul_batalcetak">Apakah anda yakin batalkan cetak struk ?</string>
    <string name="gagal_hapus">Gagal menghapus data</string>
    <string name="kurang_lengkap">Isi data dengan benar dan lengkap</string>
    <string name="sub_lappendapatan">Digunakan untuk melihat laporan pendapatan</string>
    <string name="lappendapatan">Laporan Pendapatan</string>
    <string name="laprental">Laporan Rental</string>
    <string name="sub_laprental">Digunakan untuk melihat laporan rental</string>
    <string name="lappegawai">Laporan Pegawai</string>
    <string name="sub_lappegawai">Digunakan untuk melihat laporan pegawai</string>
    <string name="lappelanggan">Laporan Pelanggan</string>
    <string name="sub_lappelanggan">Digunakan untuk melihat laporan pelanggan</string>
    <string name="lapkendaraan">Laporan Kendaraan</string>
    <string name="sub_lapkendaraan">Digunakan untuk melihat laporan kendaraan</string>
    <string name="formnull">Isi semua form terlebih dahulu</string>
    <string name="successAdd">Data berhasil ditambahkan</string>
    <string name="semuakategori">Semua Kategori</string>
    <string name="kosong">Data Kosong</string>
    <string name="menutransaksisimpanan_sp1">Semua Jenis</string>
    <string name="utama_box1">Master</string>
    <string name="utama_box1_desc">Kelola data master</string>
    <string name="utama_box2">Transaksi</string>
    <string name="utama_box2_desc">Menu untuk melakukan transaksi </string>
    <string name="utama_box3">Laporan</string>
    <string name="utama_box3_desc">Lihat data laporan transaksi</string>
    <string name="utama_box4">Utilitas</string>
    <string name="utama_box4_desc">Atur data aplikasi</string>
    <string name="lakukanpembelian">Lakukan Pembelian untuk Mendapatkan Fitur Lebih</string>
    <string name="menuutilitas_box1">Petunjuk Penggunaan</string>
    <string name="menuutilitas_box1desc">Petunjuk untuk menggunakan aplikasi</string>
    <string name="menuutilitas_box2">Backup Data</string>
    <string name="menuutilitas_box2desc">Cadangkan data ke perangkat memori</string>
    <string name="menuutilitas_box3">Restore Data</string>
    <string name="menuutilitas_box3desc">Muat data yang sudah dibackup</string>
    <string name="menuutilitas_box4">Reset Data</string>
    <string name="menuutilitas_box4desc">Reset Data Aplikasi (Hati-hati)</string>
    <string name="title_utilitas">Utilitas</string>
    <string name="menumaster_box1">Identitas</string>
    <string name="menumaster_box1_desc">Atur Identitasmu di Aplikasi Ini</string>
    <string name="menumaster_box2">Anggota</string>
    <string name="menumaster_box2desc">Simpan Data Anggotamu</string>
    <string name="menumaster_box3">Jenis Simpanan</string>
    <string name="menumaster_box3desc">Atur Jenis Simpanan Tabunganmu</string>
    <string name="title_master">Master</string>
    <string name="title_master_identitas">Ubah Identitas</string>
    <string name="title_master_anggota">Daftar Anggota</string>
    <string name="title_master_simpanan">Jenis Simpanan</string>
    <string name="menumasteridentitas_form1">Nama</string>
    <string name="menumasteridentitas_form2">Alamat</string>
    <string name="menumasteridentitas_form3">Nomor Telepon </string>
    <string name="menumasteridentitas_form4">Keterangan baris 1 (untuk struk)</string>
    <string name="menumasteridentitas_form5">Keterangan baris 2 (untuk struk)</string>
    <string name="menumasteridentitas_form6">Keterangan baris 3 (untuk struk)</string>
    <string name="namaanggota">Nama Anggota</string>
    <string name="alamatanggota">Alamat Anggota</string>
    <string name="notelpanggota">Nomor Telepon Anggota</string>
    <string name="hubungi">Hubungi</string>
    <string name="pilih">Pilih ></string>
    <string name="hapus">Hapus</string>
    <string name="confirmdelete">Anda yakin ingin menghapus </string>
    <string name="berhasil">Berhasil</string>
    <string name="alerthapuspelanggan">Menghapus data anggota memungkinkan data transaksi anggota tersebut juga akan terhapus dan tidak dapat kembalikan</string>
    <string name="cari">Cari</string>
    <string name="jenissimpanan">Jenis Simpanan</string>
    <string name="namajenis">Nama jenis simpanan</string>
    <string name="bunga">Bunga per Bulan(%)</string>
    <string name="nowhatsapp">Whatsapp Tidak Ditemukan</string>
    <string name="listsimpanan_tv1">Jenis :</string>
    <string name="listsimpanan_tv2">Bunga(%)/Bulan :</string>
    <string name="alerthapusjenis">Menghapus data jenis memungkinkan data transaksi anggota tersebut juga akan terhapus dan tidak dapat kembalikan</string>
    <string name="title_transaksi">Transaksi</string>
    <string name="menutransaksi_box1">Buat Simpanan</string>
    <string name="menutransaksi_box1_desc">Buat data simpanan anggota terdaftar</string>
    <string name="menutransaksi_box2">Proses Simpan</string>
    <string name="menutransaksi_box2desc">Proses simpanan anggota</string>
    <string name="menutransaksi_box3">Proses Ambil</string>
    <string name="menutransaksi_box3desc">Proses pengambilan simpanan anggota</string>
    <string name="menutransaksi_box4">Keuangan</string>
    <string name="menutransaksi_box4desc">Atur dan Tambah data keuanganmu</string>
    <string name="belumpilih">Belum Dipilih</string>
    <string name="menutransaksisimpanan_form1">Anggota</string>
    <string name="menutransaksisimpanan_form2">Nama Simpanan</string>
    <string name="jenissimpanan2">Jenis Simpanan (Bunga %/Bln)</string>
    <string name="alerthapus">Data yang sudah dihapus tidak dapat kembalikan</string>
    <string name="listtransaksisimpanan_tv4">Saldo :</string>
    <string name="listtransaksisimpanan_tv1">Nama Simpanan :</string>
    <string name="listtransaksisimpanan_tv2">Jenis Simpanan :</string>
    <string name="listtransaksisimpanan_tv3">Nama Anggota :</string>
    <string name="menutransaksiproses_tv3">Bunga :</string>
    <string name="tambahdata">Tambah Data Baru</string>
    <string name="menutransaksiproses_form1">Nama Simpanan</string>
    <string name="menutransaksiproses_form2">Nomor Transaksi</string>
    <string name="menutransaksiproses_form3">Tanggal Transaksi</string>
    <string name="menutransaksiproses_form4">Masuk</string>
    <string name="menutransaksiproses_form4a">Keluar</string>
    <string name="menutransaksiproses_form5">Sisa Saldo</string>
    <string name="menutransaksiproses_tv1">Anggota :</string>
    <string name="menutransaksiproses_tv2">Jenis Simpanan :</string>
    <string name="saldotidakcukup">Pastikan Saldo Keuangan Anda Mencukupi</string>
    <string name="konfirmasitransaksi">Konfirmasi Transaksi?</string>
    <string name="konfirmasitransaksi_desc">Data yang telah disimpan tidak dapat diubah, pastikan data yang anda inputkan sudah benar.</string>
    <string name="yes">Ya</string>
    <string name="printconfirmation">Apakah anda ingin mencetak struk?</string>
    <string name="no">Tidak</string>
    <string name="fakturproses">TABUNGAN-</string>
    <string name="ketproses">Simpanan : ? | Anggota : ? - Nominal : ?</string>
    <string name="berhasilhapus">Berhasil Menghapus Data</string>
    <string name="saldo">Saldo Anda :</string>
    <string name="fakturmasuk">UANG-MASUK-</string>
    <string name="fakturkeluar">UANG-KELUAR-</string>
    <string name="datasalah">Masukkan Data dengan Benar</string>
    <string name="titleSimpan">Simpan Transaksi</string>
    <string name="konfirmasidatabenar">Konfirmasi Data yang Anda Masukkan Sudah Benar</string>
    <string name="hintFaktur">Faktur</string>
    <string name="keterangan">Keterangan</string>
    <string name="kategoriSemua">Semua</string>
    <string name="kategoriPemasukan">Pemasukan</string>
    <string name="kategoriPengeluaran">Pengeluaran</string>
    <string name="title_transaksi_keuangan">Detail Keuangan</string>
    <string name="masuk">Masuk :</string>
    <string name="cetak_line2">No Transaksi :</string>
    <string name="laporan_keuangan">Laporan Keuangan</string>
    <string name="laporan_keuangan_desc">Digunakan untuk melihat Laporan Keuanganmu</string>
    <string name="laporan_anggota">Laporan Anggota</string>
    <string name="cetak_line1">Tanggal Transaksi :</string>
    <string name="cetak_line3">Nama Simpanan :</string>
    <string name="cetak_line4">Nama Anggota  :</string>
    <string name="cetak_line5">Keterangan :</string>
    <string name="preview">Preview</string>
    <string name="tidakadaperangkat">Tidak Ada Perangkat</string>
    <string name="namaprinter">Nama Printer</string>
    <string name="gagalmuatstruk">Gagal Memuat Struk</string>
    <string name="nodevice">Tidak Ada Perangkat</string>
    <string name="noprinter">Tidak Ada Printer</string>
    <string name="failedpreview">Preview Gagal</string>
    <string name="printernotready">Printer Belum Siap</string>
    <string name="nobtadapter">Tidak Ada Bluetooth Adapter</string>
    <string name="printernotselected">Printer Belum Dipilih</string>
    <string name="printsucceed">Print Berhasil</string>
    <string name="cetak">Cetak</string>
    <string name="daftarperangkat">Daftar Perangkat</string>
    <string name="cariperangkat">Cari Perangkat</string>
    <string name="btactivated">Bluetooth Berhasil Diaktifkan</string>
    <string name="cetak_line6">Masuk :</string>
    <string name="cetak_line7">Keluar :</string>
    <string name="cetak_line8">Saldo :</string>
    <string name="laporan_anggota_desc">Digunakan untuk melihat Laporan Anggota</string>
    <string name="laporan_jenissimpanan">Laporan Jenis Simpanan</string>
    <string name="laporan_jenissimpanan_desc">Digunakan untuk melihat Laporan Jenis Simpanan</string>
    <string name="laporan_simpanan">Laporan Simpanan</string>
    <string name="laporan_simpanan_desc">Digunakan untuk melihat Laporan Simpanan</string>
    <string name="laporan_proses_peranggota">Laporan Transaksi Per-Anggota</string>
    <string name="laporan_proses_peranggota_desc">Digunakan untuk melihat Laporan Transaksi Per-Anggota</string>
    <string name="listtransaksiproses_tv1">Tanggal Transaksi :</string>
    <string name="listtransaksiproses_tv2">Nomor Transaksi :</string>
    <string name="listtransaksiproses_tv3">Keterangan :</string>
    <string name="listtransaksiproses_tv4">Masuk :</string>
    <string name="listtransaksiproses_tv5">Keluar :</string>
    <string name="listtransaksiproses_tv6">Saldo :</string>
</resources>